Мой первый коммит

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="font-awesome/css/all.css">
-    <script src="js/js.js" defer></script>
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-    <script src="js/jquery-1.8.3.min.js"></script>
-    <script src="slick/slick.min.js" defer></script>
+    <script language="javascript" src="js/jquery-1.8.3.min.js"></script>
+    <script language="javascript" src="slick/slick.min.js"></script>
+    <script language="javascript" src="js/js.js" defer></script>
 </head>
 <body>
 <div class="container">
@@ -131,19 +131,19 @@
                     Примеры моих работ
                 </h2>
                     <div class="multiple-items">
-                        <a href="#" class="slider-link">
+                        <a href="http://furkade.yanaloz.ru/" class="slider-link" target="_blank">
                             <div class="slider-item"><img class="slider-img" src="img/furkad.jpg" alt="">
                                 <p class="slider-img__title">Сайт фан-клуба</p></div>
                         </a>
-                        <a href="#" class="slider-link">
+                        <a href="http://waxom.yanaloz.ru/" class="slider-link" target="_blank">
                             <div class="slider-item"><img class="slider-img" src="img/waxom.jpg" alt="">
                                 <p class="slider-img__title">Портфолио студии дизайна</p></div>
                         </a>
-                        <a href="#" class="slider-link">
+                        <a href="http://news.yanaloz.ru/" class="slider-link" target="_blank">
                             <div class="slider-item"><img class="slider-img" src="img/news.jpg" alt="">
                                 <p class="slider-img__title">Новостная страница</p></div>
                         </a>
-                        <a href="#" class="slider-link">
+                        <a href="http://products.yanaloz.ru/" class="slider-link" target="_blank">
                             <div class="slider-item"><img class="slider-img" src="img/products.jpg" alt="">
                                 <p class="slider-img__title">Макет лендинга</p></div>
                         </a>
